Fixed mapcard name overflow

--- a/client/src/components/MapCard/MapCard.scss
+++ b/client/src/components/MapCard/MapCard.scss
@@ -9,13 +9,14 @@
     z-index: 2;
 
     .map-title {
-      transform: translate(0%, 20%);
       float: left;
+      font-size: 18px;
       margin: 0;
-      font-size: 16px;
-      width: 200px;
       overflow: hidden;
       text-overflow: ellipsis;
+      transform: translate(0%, 20%);
+      width: 190px;
+      white-space: nowrap;
     }
   }
 
